# r3

./: .pre-commit-config.yaml  CONTRIBUTING.md  HISTORY  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yaml
docs/: cli.md  index.md  python_api.md  repository_format.md  specification.md  tutorial.md
docs/plans/: 2026-02-11-remote-storage-design.md  2026-02-11-remote-storage-implementation.md
docs/superpowers/plans/: 2026-04-27-remote-storage-extensions.md
docs/superpowers/specs/: 2026-03-21-remote-storage-extensions-design.md
migration/: 1_0_0_beta_6.py  1_0_0_beta_7.py  1_0_0_beta_8.py  1_0_0_beta_9.py
r3/: __init__.py  _indices.py  build_indices.py  cli.py  commit.py  core.py  index.py  init.py  job.py  query.py  remote.py  repository.py  storage.py  utils.py
test/: test_cli.py  test_core.py  test_index.py  test_job.py  test_live_s3.py  test_query.py  test_remote.py  test_repository.py  test_storage.py  test_version.py
test/core/: test_index.py  test_job.py  test_repository.py  test_storage.py
test/data/jobs/base/: metadata.yaml  r3.yaml
test/data/jobs/changed_root/config/: metadata.yaml  r3.yaml
test/data/jobs/metadata_in_main_config/: r3.yaml  run.py
test/data/jobs/nested/: metadata.yaml  r3.yaml
test/data/jobs/nested/code/: run.py
test/data/jobs/no_metadata/: run.py
test/data/repository/: r3.yaml  r3repository.yaml
