[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "r3"
description = "Repository of Reproducible Research"
authors = [
    {name = "Matthias Tangemann", email = "matthias.tangemann@bethgelab.org"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "click~=8.1.3",
    "executor~=23.2",
    "pyyaml~=6.0",
]
dynamic = ["version"]


[project.optional-dependencies]
dev = [
    "mypy==0.991",
    "pyfakefs==5.0.0",
    "pytest==7.2.0",
    "pytest-cov==4.0.0",
    "ruff==0.0.284",
    "types-pyyaml~=6.0",
]


[project.scripts]
r3 = "r3.cli:cli"


[tool.mypy]
exclude = "^test/data"


[[tool.mypy.overrides]]
module = [
    "executor",
    "pyfakefs.fake_filesystem",
]
ignore_missing_imports = true


[tool.ruff]
select = ["B", "E", "F", "FIX", "I", "T20"]
