[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "r3"
description = "Repository for Reliable Research"
authors = [
    {name = "Matthias Tangemann", email = "matthias.tangemann@bethgelab.org"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "click~=8.1",
    "executor~=23.2",
    "pyyaml~=6.0",
    "tqdm~=4.66"
]
dynamic = ["version"]


[dependency-groups]
dev = [
    "mkdocs~=1.5",
    "mkdocs-click~=0.8",
    "mkdocs-material~=9.4",
    "mkdocstrings[python]~=0.24",
    "mypy~=1.18",
    "pre-commit>=4.3.0",
    "pyfakefs~=5.3",
    "pytest~=8.1",
    "pytest-cov~=5.0",
    "pytest-mock~=3.14",
    "ruff~=0.3",
    "types-pyyaml~=6.0",
    "types-tqdm~=4.66",
]


[project.scripts]
r3 = "r3.cli:cli"


[tool.mypy]
exclude = "^test/data"


[[tool.mypy.overrides]]
module = [
    "executor",
    "pyfakefs.fake_filesystem",
]
ignore_missing_imports = true


[tool.ruff]
lint.select = ["B", "E", "F", "FIX", "I", "T20"]


[tool.setuptools]
py-modules = ["r3"]
