[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "r3"
description = "Repository for Reliable Research"
authors = [
    {name = "Matthias Tangemann", email = "matthias.tangemann@bethgelab.org"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "boto3~=1.35",
    "click~=8.1",
    "executor~=23.2",
    "pyyaml~=6.0",
    "tqdm~=4.66"
]
dynamic = ["version"]


[dependency-groups]
dev = [
    "boto3-stubs[s3]~=1.35",
    "mkdocs~=1.5",
    "mkdocs-click~=0.8",
    "mkdocs-material~=9.4",
    "mkdocstrings[python]~=0.24",
    "moto[s3]~=5.0",
    "mypy~=1.18",
    "pre-commit>=4.3.0",
    "pyfakefs~=5.3",
    "pytest~=8.1",
    "pytest-cov~=5.0",
    "pytest-mock~=3.14",
    "ruff~=0.3",
    "types-pyyaml~=6.0",
    "types-tqdm~=4.66",
]


[project.optional-dependencies]
archive = ["pyzstd~=0.16"]


[project.scripts]
r3 = "r3.cli:cli"


[tool.pytest.ini_options]
markers = [
    "live_s3: tests against a live S3-compatible endpoint (requires env vars; opt-in)",
]


[tool.mypy]
exclude = "^test/data"


[[tool.mypy.overrides]]
module = [
    "executor",
    "moto",
    "moto.s3",
    "pyfakefs.fake_filesystem",
]
ignore_missing_imports = true


[tool.ruff]
lint.select = ["B", "E", "F", "FIX", "I", "T20"]


[tool.setuptools]
py-modules = ["r3"]
